# mpifx

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.rst  config.cmake  make.arch.template  makefile  meson.build
cmake/: MpiFxUtils.cmake  install-mod.py
doc/doxygen/: Doxyfile  footer.html  fyppf90.sh  m4f90.sh
doc/sphinx/: Makefile  about.rst  conf.py  index.rst  installing.rst  license.rst  routines.rst  using.rst
doc/sphinx/_themes/dftbplus/static/: dftbplus.css  sphinxdoc.css_t
lib/: CMakeLists.txt  make.build  make.deps  meson.build  module.fpp  mpifx.fypp  mpifx_abort.fpp  mpifx_allgather.fpp  mpifx_allgatherv.fpp  mpifx_allreduce.fpp  mpifx_barrier.fpp  mpifx_bcast.fpp  mpifx_comm.fpp  mpifx_constants.fpp  mpifx_finalize.fpp  mpifx_gather.fpp  mpifx_gatherv.fpp  mpifx_get_processor_name.fpp  mpifx_helper.fpp  mpifx_init.fpp  mpifx_recv.fpp  mpifx_reduce.fpp  mpifx_scatter.fpp  mpifx_scatterv.fpp  mpifx_send.fpp  mpifx_shared_memory.fpp  mpifx_win.fpp
src/: CMakeLists.txt  GNUmakefile  Makefile.dep  Makefile.lib  common.m4  libmpifx.F90  module.fpp  mpi_constants.F90  mpifx.fypp  mpifx_abort.F90  mpifx_allgather.F90  mpifx_allgather.fpp  mpifx_allgather.m4  mpifx_allgatherv.F90  mpifx_allgatherv.m4  mpifx_allreduce.F90  mpifx_allreduce.fpp  mpifx_allreduce.m4  mpifx_barrier.F90  mpifx_barrier.m4  mpifx_bcast.F90  mpifx_bcast.fpp  mpifx_bcast.m4  mpifx_comm.F90  mpifx_comm.m4  mpifx_common.F90  mpifx_common.fpp  mpifx_constants.F90  mpifx_constants.fpp  mpifx_finalize.F90  mpifx_gather.F90  mpifx_gather.fpp  mpifx_gather.m4  mpifx_gatherv.F90  mpifx_gatherv.m4  mpifx_get_processor_name.F90  mpifx_get_processor_name.fpp  mpifx_helper.F90  mpifx_helper.fpp  mpifx_helper.m4  (+17 more)
subprojects/: Fortuno.cmake  FortunoMpi.cmake
test/: CMakeLists.txt  GNUmakefile  Makefile.dep  Makefile.targets  make.build  make.deps  meson.build  test_allgather.f90  test_allgatherv.f90  test_allreduce.f90  test_bcast.f90  test_comm_split.f90  test_gather.f90  test_gatherv.f90  test_reduce.f90  test_scatter.f90  test_scatterv.f90  test_send_recv.f90  test_shared_memory.f90  test_win_shared_mem.f90  testhelper.f90
test/integration/cmake/: CMakeLists.txt  runtest.sh  test_mpifxbuild.f90
test/integration/pkgconfig/: runtest.sh  test_mpifxbuild.f90
test/unit/: CMakeLists.txt  test_allgather.fpp  test_allgatherv.f90  test_allgatherv.fpp  test_allreduce.f90  test_allreduce.fpp  test_bcast.fpp  test_comm_split.f90  test_comm_split.fpp  test_comm_split_type.f90  test_comm_split_type.fpp  test_gather.fpp  test_gatherv.f90  test_gatherv.fpp  test_reduce.f90  test_reduce.fpp  test_scatter.fpp  test_scatterv.f90  test_scatterv.fpp  test_send_recv.fpp  testapp.f90
utils/: cr_makedep
utils/export/: mpifx-config.cmake.in  mpifx.pc.in
utils/srcmanip/: set_version
